--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     
 <script type="text/javascript">
 let element = prompt("Enter new element!!!");
+let input = parseInt(prompt("Enter number you would like to see"));
 const obj = function arrayToList(){
     let list = {
       value: 1,
@@ -30,10 +31,19 @@ function listToArray(arry){
 function prepend(element, list){
   list.unshift(element);
   return list;
+  
 }
 
+function nth(number, list){
+  for(let x = 0; x < list.length; x++){
+    if(number === x){
+      return list[x];
+    }
+  }
+}
 
-console.log(element, listToArray(obj()));
+console.log(prepend(element, listToArray(obj())));
+console.log(nth(input,prepend(element, listToArray(obj))));
 </script>
 </body>
 
