--- a/index.html
+++ b/index.html
@@ -7,21 +7,24 @@
     
 <script type="text/javascript">
 
-let osoba = {};
+let niz1 = [1,"merry","pooin",5],
+    niz2 = [3,"eight","now",9];
 
-function accepts(callback){
-  setTimeout(callback,1000);
+
+function check(niz1,niz2){
+  let novi = [];
+for(let y = 0; y < 1; y++){
+  for(let x = 0; x < niz2.length; x++){
+    if(niz1[y] !== niz2[x]){
+      novi.push(niz2[x]);
+     
+    }
+  }
   
 }
-
-
-accepts(function (){
-  osoba.ime = "Ante";
-  osoba.prezime = "Krtalić";
-  console.log(osoba);
-})
-
-console.log(osoba);
+return novi;
+}
+console.log(check(niz1,niz2));
 
 
 </script>
