--- a/index.html
+++ b/index.html
@@ -6,15 +6,32 @@
 <body>
     
 <script type="text/javascript">
-    let knjiga = {
-       autor: "J.R.R.Tolkien",
-       ime: "Gospodar Prstenova",
-       godina: 1954
-   };
+   let movies = [{
+name: 'The Godfather',
+duration: 175,
+rating: 9.2,
+actors: ['Marlon Brando', 'Al Pacino', 'James Caan', 'Richard Castellano']
+}, {
+name: 'The Shawshank Redemption',
+duration: 142,
+rating: 9.3,
+actors: ['Tim Robbins', 'Morgan Freeman', 'Bob Gunton']
+}];
 
-   for(key in knjiga){
-       console.log(`${key}:${knjiga[key]}`);
-   }
+let largest = 0;
+for(let x = 0; x < movies.length; x++){
+    console.log(movies[x].name);
+}
+
+for(let y = 0; y < movies.length; y++){
+    if(movies[y].rating > movies[largest].rating){
+        largest = movies[y].rating;
+    }else{
+        continue;
+    }
+    console.log("Biggest number is " + largest);
+}
+
 
 </script>
 </body>
